Simplification du code